exports[`invalid(1): {\"name\": \"Foo\"} 1`] = `

[Input]
  1 | {"name": "Foo"}

`;

exports[`invalid(1): {\"name\": \"Foo\"} 2`] = `

Message:
> 1 | {"name": "Foo"}
    |          ^^^^^ Invalid package name: name can no longer contain capital letters.

`;

exports[`invalid(10): {\"version\": \"^1.0.0\"} 1`] = `

[Input]
  1 | {"version": "^1.0.0"}

`;

exports[`invalid(10): {\"version\": \"^1.0.0\"} 2`] = `

Message:
> 1 | {"version": "^1.0.0"}
    |             ^^^^^^^^ \`^1.0.0\` is not a valid semver version.

`;

exports[`invalid(100): {\"imports\": {\"#fs\": \"node:fs\"}} 1`] = `

[Input]
  1 | {"imports": {"#fs": "node:fs"}}

`;

exports[`invalid(100): {\"imports\": {\"#fs\": \"node:fs\"}} 2`] = `

Message:
> 1 | {"imports": {"#fs": "node:fs"}}
    |                     ^^^^^^^^^ The \`imports\` target \`node:fs\` is not a valid local path or package specifier.

`;

exports[`invalid(101): {\"imports\": {\"#scope\": \"@scope\"}} 1`] = `

[Input]
  1 | {"imports": {"#scope": "@scope"}}

`;

exports[`invalid(101): {\"imports\": {\"#scope\": \"@scope\"}} 2`] = `

Message:
> 1 | {"imports": {"#scope": "@scope"}}
    |                        ^^^^^^^^ The \`imports\` target \`@scope\` is not a valid local path or package specifier.

`;

exports[`invalid(102): {\"imports\": {\"#percent\": \"foo/%\"}} 1`] = `

[Input]
  1 | {"imports": {"#percent": "foo/%"}}

`;

exports[`invalid(102): {\"imports\": {\"#percent\": \"foo/%\"}} 2`] = `

Message:
> 1 | {"imports": {"#percent": "foo/%"}}
    |                          ^^^^^^^ The \`imports\` target \`foo/%\` is not a valid local path or package specifier.

`;

exports[`invalid(103): {\"imports\": {\"#percent\": \"foo/%zz\"}} 1`] = `

[Input]
  1 | {"imports": {"#percent": "foo/%zz"}}

`;

exports[`invalid(103): {\"imports\": {\"#percent\": \"foo/%zz\"}} 2`] = `

Message:
> 1 | {"imports": {"#percent": "foo/%zz"}}
    |                          ^^^^^^^^^ The \`imports\` target \`foo/%zz\` is not a valid local path or package specifier.

`;

exports[`invalid(104): {\"imports\": {\"#percent\": \"foo/%2\"}} 1`] = `

[Input]
  1 | {"imports": {"#percent": "foo/%2"}}

`;

exports[`invalid(104): {\"imports\": {\"#percent\": \"foo/%2\"}} 2`] = `

Message:
> 1 | {"imports": {"#percent": "foo/%2"}}
    |                          ^^^^^^^^ The \`imports\` target \`foo/%2\` is not a valid local path or package specifier.

`;

exports[`invalid(105): {\"imports\": {\"#dep\": {\"0\": \"./dep.js\"}}} 1`] = `

[Input]
  1 | {"imports": {"#dep": {"0": "./dep.js"}}}

`;

exports[`invalid(105): {\"imports\": {\"#dep\": {\"0\": \"./dep.js\"}}} 2`] = `

Message:
> 1 | {"imports": {"#dep": {"0": "./dep.js"}}}
    |                       ^^^ Condition key \`0\` must not be an array index.

`;

exports[`invalid(106): {\"bin\": [\"./cli.js\"]} 1`] = `

[Input]
  1 | {"bin": ["./cli.js"]}

`;

exports[`invalid(106): {\"bin\": [\"./cli.js\"]} 2`] = `

Message:
> 1 | {"bin": ["./cli.js"]}
    |         ^^^^^^^^^^^^ The \`bin\` field must be a string or an object mapping command names to file paths.

`;

exports[`invalid(107): {\"bin\": true} 1`] = `

[Input]
  1 | {"bin": true}

`;

exports[`invalid(107): {\"bin\": true} 2`] = `

Message:
> 1 | {"bin": true}
    |         ^^^^ The \`bin\` field must be a string or an object mapping command names to file paths.

`;

exports[`invalid(108): {\"bin\": null} 1`] = `

[Input]
  1 | {"bin": null}

`;

exports[`invalid(108): {\"bin\": null} 2`] = `

Message:
> 1 | {"bin": null}
    |         ^^^^ The \`bin\` field must be a string or an object mapping command names to file paths.

`;

exports[`invalid(109): {\"bin\": {\"foo\": true}} 1`] = `

[Input]
  1 | {"bin": {"foo": true}}

`;

exports[`invalid(109): {\"bin\": {\"foo\": true}} 2`] = `

Message:
> 1 | {"bin": {"foo": true}}
    |                 ^^^^ The \`bin\` path for \`foo\` must be a string.

`;

exports[`invalid(11): {\"version\": \"latest\"} 1`] = `

[Input]
  1 | {"version": "latest"}

`;

exports[`invalid(11): {\"version\": \"latest\"} 2`] = `

Message:
> 1 | {"version": "latest"}
    |             ^^^^^^^^ \`latest\` is not a valid semver version.

`;

exports[`invalid(110): {\"bin\": {\"foo\": \"./foo.js\", \"bar\": \"\"}} 1`] = `

[Input]
  1 | {"bin": {"foo": "./foo.js", "bar": ""}}

`;

exports[`invalid(110): {\"bin\": {\"foo\": \"./foo.js\", \"bar\": \"\"}} 2`] = `

Message:
> 1 | {"bin": {"foo": "./foo.js", "bar": ""}}
    |                                    ^^ The \`bin\` path for \`bar\` must not be empty.

`;

exports[`invalid(111): {\"bin\": \"./cli.js\", \"directories\": {\"bin\": \"./bin\"}} 1`] = `

[Input]
  1 | {"bin": "./cli.js", "directories": {"bin": "./bin"}}

`;

exports[`invalid(111): {\"bin\": \"./cli.js\", \"directories\": {\"bin\": \"./bin\"}} 2`] = `

Message:
> 1 | {"bin": "./cli.js", "directories": {"bin": "./bin"}}
    |                                     ^^^^^ Use either \`bin\` or \`directories.bin\`, not both.

`;

exports[`invalid(112): {\"man\": \"./doc/foo\"} 1`] = `

[Input]
  1 | {"man": "./doc/foo"}

`;

exports[`invalid(112): {\"man\": \"./doc/foo\"} 2`] = `

Message:
> 1 | {"man": "./doc/foo"}
    |         ^^^^^^^^^^^ The \`man\` file \`./doc/foo\` must end in a man-section extension (for example \`.1\`, optionally \`.gz\`).

`;

exports[`invalid(113): {\"man\": [\"./doc/foo.1\", \"./doc/bar\"]} 1`] = `

[Input]
  1 | {"man": ["./doc/foo.1", "./doc/bar"]}

`;

exports[`invalid(113): {\"man\": [\"./doc/foo.1\", \"./doc/bar\"]} 2`] = `

Message:
> 1 | {"man": ["./doc/foo.1", "./doc/bar"]}
    |                         ^^^^^^^^^^^ The \`man\` file \`./doc/bar\` must end in a man-section extension (for example \`.1\`, optionally \`.gz\`).

`;

exports[`invalid(114): {\"man\": 42} 1`] = `

[Input]
  1 | {"man": 42}

`;

exports[`invalid(114): {\"man\": 42} 2`] = `

Message:
> 1 | {"man": 42}
    |         ^^ The \`man\` field must be a string or an array of strings.

`;

exports[`invalid(115): {\"man\": [42]} 1`] = `

[Input]
  1 | {"man": [42]}

`;

exports[`invalid(115): {\"man\": [42]} 2`] = `

Message:
> 1 | {"man": [42]}
    |          ^^ Each \`man\` entry must be a string.

`;

exports[`invalid(116): {\"man\": \"./foo.1.br\"} 1`] = `

[Input]
  1 | {"man": "./foo.1.br"}

`;

exports[`invalid(116): {\"man\": \"./foo.1.br\"} 2`] = `

Message:
> 1 | {"man": "./foo.1.br"}
    |         ^^^^^^^^^^^^ The \`man\` file \`./foo.1.br\` must end in a man-section extension (for example \`.1\`, optionally \`.gz\`).

`;

exports[`invalid(117): {\"sideEffects\": \"false\"} 1`] = `

[Input]
  1 | {"sideEffects": "false"}

`;

exports[`invalid(117): {\"sideEffects\": \"false\"} 2`] = `

Message:
> 1 | {"sideEffects": "false"}
    |                 ^^^^^^^ The \`sideEffects\` field should be the boolean \`false\`, not the string \`"false"\`. A quoted boolean is always truthy, so it does not disable tree-shaking.

Suggestion 1/1: Replace with the boolean \`false\`.:
  1 | {"sideEffects": false}

`;

exports[`invalid(118): {\"sideEffects\": \"true\"} 1`] = `

[Input]
  1 | {"sideEffects": "true"}

`;

exports[`invalid(118): {\"sideEffects\": \"true\"} 2`] = `

Message:
> 1 | {"sideEffects": "true"}
    |                 ^^^^^^ The \`sideEffects\` field should be the boolean \`true\`, not the string \`"true"\`. A quoted boolean is always truthy, so it does not disable tree-shaking.

Suggestion 1/1: Replace with the boolean \`true\`.:
  1 | {"sideEffects": true}

`;

exports[`invalid(119): {\"sideEffects\": \"./src/polyfill.js\"} 1`] = `

[Input]
  1 | {"sideEffects": "./src/polyfill.js"}

`;

exports[`invalid(119): {\"sideEffects\": \"./src/polyfill.js\"} 2`] = `

Message:
> 1 | {"sideEffects": "./src/polyfill.js"}
    |                 ^^^^^^^^^^^^^^^^^^^ The \`sideEffects\` field must be a boolean or an array of file globs.

`;

exports[`invalid(12): {\"version\": \"\"} 1`] = `

[Input]
  1 | {"version": ""}

`;

exports[`invalid(12): {\"version\": \"\"} 2`] = `

Message:
> 1 | {"version": ""}
    |             ^^ \`\` is not a valid semver version.

`;

exports[`invalid(120): {\"sideEffects\": 0} 1`] = `

[Input]
  1 | {"sideEffects": 0}

`;

exports[`invalid(120): {\"sideEffects\": 0} 2`] = `

Message:
> 1 | {"sideEffects": 0}
    |                 ^ The \`sideEffects\` field must be a boolean or an array of file globs.

`;

exports[`invalid(121): {\"sideEffects\": {}} 1`] = `

[Input]
  1 | {"sideEffects": {}}

`;

exports[`invalid(121): {\"sideEffects\": {}} 2`] = `

Message:
> 1 | {"sideEffects": {}}
    |                 ^^ The \`sideEffects\` field must be a boolean or an array of file globs.

`;

exports[`invalid(122): {\"sideEffects\": [\"./src/polyfill.js\", 1]} 1`] = `

[Input]
  1 | {"sideEffects": ["./src/polyfill.js", 1]}

`;

exports[`invalid(122): {\"sideEffects\": [\"./src/polyfill.js\", 1]} 2`] = `

Message:
> 1 | {"sideEffects": ["./src/polyfill.js", 1]}
    |                                       ^ Each \`sideEffects\` entry must be a file glob string.

`;

exports[`invalid(123): {\"sideEffects\": [\"./src/polyfill.js\", null]} 1`] = `

[Input]
  1 | {"sideEffects": ["./src/polyfill.js", null]}

`;

exports[`invalid(123): {\"sideEffects\": [\"./src/polyfill.js\", null]} 2`] = `

Message:
> 1 | {"sideEffects": ["./src/polyfill.js", null]}
    |                                       ^^^^ Each \`sideEffects\` entry must be a file glob string.

`;

exports[`invalid(124): {\"engines\": {\"node\": \">=foo\"}} 1`] = `

[Input]
  1 | {"engines": {"node": ">=foo"}}

`;

exports[`invalid(124): {\"engines\": {\"node\": \">=foo\"}} 2`] = `

Message:
> 1 | {"engines": {"node": ">=foo"}}
    |                      ^^^^^^^ \`node\` has an invalid version range \`>=foo\`.

`;

exports[`invalid(125): {\"engines\": {\"node\": \"not a range\"}} 1`] = `

[Input]
  1 | {"engines": {"node": "not a range"}}

`;

exports[`invalid(125): {\"engines\": {\"node\": \"not a range\"}} 2`] = `

Message:
> 1 | {"engines": {"node": "not a range"}}
    |                      ^^^^^^^^^^^^^ \`node\` has an invalid version range \`not a range\`.

`;

exports[`invalid(126): {\"engines\": {\"node\": \">=18\", \"npm\": \"garbage\"}} 1`] = `

[Input]
  1 | {"engines": {"node": ">=18", "npm": "garbage"}}

`;

exports[`invalid(126): {\"engines\": {\"node\": \">=18\", \"npm\": \"garbage\"}} 2`] = `

Message:
> 1 | {"engines": {"node": ">=18", "npm": "garbage"}}
    |                                     ^^^^^^^^^ \`npm\` has an invalid version range \`garbage\`.

`;

exports[`invalid(127): {\"engines\": {\"node\": \">= 18 || garbage\"}} 1`] = `

[Input]
  1 | {"engines": {"node": ">= 18 || garbage"}}

`;

exports[`invalid(127): {\"engines\": {\"node\": \">= 18 || garbage\"}} 2`] = `

Message:
> 1 | {"engines": {"node": ">= 18 || garbage"}}
    |                      ^^^^^^^^^^^^^^^^^^ \`node\` has an invalid version range \`>= 18 || garbage\`.

`;

exports[`invalid(128): {\"engines\": {\"node\": \"\"}} 1`] = `

[Input]
  1 | {"engines": {"node": ""}}

`;

exports[`invalid(128): {\"engines\": {\"node\": \"\"}} 2`] = `

Message:
> 1 | {"engines": {"node": ""}}
    |                      ^^ \`node\` has an invalid version range \`\`.

`;

exports[`invalid(129): {\"engines\": {\"node\": \"  \"}} 1`] = `

[Input]
  1 | {"engines": {"node": "  "}}

`;

exports[`invalid(129): {\"engines\": {\"node\": \"  \"}} 2`] = `

Message:
> 1 | {"engines": {"node": "  "}}
    |                      ^^^^ \`node\` has an invalid version range \`  \`.

`;

exports[`invalid(13): {\"version\": \"v1.0.0.0\"} 1`] = `

[Input]
  1 | {"version": "v1.0.0.0"}

`;

exports[`invalid(13): {\"version\": \"v1.0.0.0\"} 2`] = `

Message:
> 1 | {"version": "v1.0.0.0"}
    |             ^^^^^^^^^^ \`v1.0.0.0\` is not a valid semver version.

`;

exports[`invalid(130): {\"engines\": \">=18\"} 1`] = `

[Input]
  1 | {"engines": ">=18"}

`;

exports[`invalid(130): {\"engines\": \">=18\"} 2`] = `

Message:
> 1 | {"engines": ">=18"}
    |             ^^^^^^ The \`engines\` field must be an object.

`;

exports[`invalid(131): {\"engines\": [\"node\"]} 1`] = `

[Input]
  1 | {"engines": ["node"]}

`;

exports[`invalid(131): {\"engines\": [\"node\"]} 2`] = `

Message:
> 1 | {"engines": ["node"]}
    |             ^^^^^^^^ The \`engines\` field must be an object.

`;

exports[`invalid(132): {\"engines\": null} 1`] = `

[Input]
  1 | {"engines": null}

`;

exports[`invalid(132): {\"engines\": null} 2`] = `

Message:
> 1 | {"engines": null}
    |             ^^^^ The \`engines\` field must be an object.

`;

exports[`invalid(133): {\"devEngines\": [\"node\"]} 1`] = `

[Input]
  1 | {"devEngines": ["node"]}

`;

exports[`invalid(133): {\"devEngines\": [\"node\"]} 2`] = `

Message:
> 1 | {"devEngines": ["node"]}
    |                ^^^^^^^^ The \`devEngines\` field must be an object.

`;

exports[`invalid(134): {\"devEngines\": \"node\"} 1`] = `

[Input]
  1 | {"devEngines": "node"}

`;

exports[`invalid(134): {\"devEngines\": \"node\"} 2`] = `

Message:
> 1 | {"devEngines": "node"}
    |                ^^^^^^ The \`devEngines\` field must be an object.

`;

exports[`invalid(135): {\"devEngines\": {\"runtime\": \"node\"}} 1`] = `

[Input]
  1 | {"devEngines": {"runtime": "node"}}

`;

exports[`invalid(135): {\"devEngines\": {\"runtime\": \"node\"}} 2`] = `

Message:
> 1 | {"devEngines": {"runtime": "node"}}
    |                            ^^^^^^ The \`devEngines.runtime\` field must be an object or an array of objects.

`;

exports[`invalid(136): {\"devEngines\": {\"runtime\": [\"node\"]}} 1`] = `

[Input]
  1 | {"devEngines": {"runtime": ["node"]}}

`;

exports[`invalid(136): {\"devEngines\": {\"runtime\": [\"node\"]}} 2`] = `

Message:
> 1 | {"devEngines": {"runtime": ["node"]}}
    |                             ^^^^^^ Each \`devEngines.runtime\` element must be an object.

`;

exports[`invalid(137): {\"devEngines\": {\"packageManager\": [{\"name\": \"npm\"}, \"pnpm\"]}} 1`] = `

[Input]
  1 | {"devEngines": {"packageManager": [{"name": "npm"}, "pnpm"]}}

`;

exports[`invalid(137): {\"devEngines\": {\"packageManager\": [{\"name\": \"npm\"}, \"pnpm\"]}} 2`] = `

Message:
> 1 | {"devEngines": {"packageManager": [{"name": "npm"}, "pnpm"]}}
    |                                                     ^^^^^^ Each \`devEngines.packageManager\` element must be an object.

`;

exports[`invalid(138): {\"devEngines\": {\"runtime\": {\"version\": \">=20\"}}} 1`] = `

[Input]
  1 | {"devEngines": {"runtime": {"version": ">=20"}}}

`;

exports[`invalid(138): {\"devEngines\": {\"runtime\": {\"version\": \">=20\"}}} 2`] = `

Message:
> 1 | {"devEngines": {"runtime": {"version": ">=20"}}}
    |                            ^^^^^^^^^^^^^^^^^^^ Each \`devEngines.runtime\` entry must have a string \`name\`.

`;

exports[`invalid(139): {\"devEngines\": {\"runtime\": {\"name\": 1}}} 1`] = `

[Input]
  1 | {"devEngines": {"runtime": {"name": 1}}}

`;

exports[`invalid(139): {\"devEngines\": {\"runtime\": {\"name\": 1}}} 2`] = `

Message:
> 1 | {"devEngines": {"runtime": {"name": 1}}}
    |                                     ^ Each \`devEngines.runtime\` entry must have a string \`name\`.

`;

exports[`invalid(14): {\"version\": \"v1.0.0\"} 1`] = `

[Input]
  1 | {"version": "v1.0.0"}

`;

exports[`invalid(14): {\"version\": \"v1.0.0\"} 2`] = `

Message:
> 1 | {"version": "v1.0.0"}
    |             ^^^^^^^^ \`v1.0.0\` is not a valid semver version.

Output:
  1 | {"version": "1.0.0"}

`;

exports[`invalid(140): {\"devEngines\": {\"runtime\": {\"name\": \"node\", \"version\": 20}}} 1`] = `

[Input]
  1 | {"devEngines": {"runtime": {"name": "node", "version": 20}}}

`;

exports[`invalid(140): {\"devEngines\": {\"runtime\": {\"name\": \"node\", \"version\": 20}}} 2`] = `

Message:
> 1 | {"devEngines": {"runtime": {"name": "node", "version": 20}}}
    |                                                        ^^ The \`devEngines.runtime\` \`version\` must be a valid version range string.

`;

exports[`invalid(141): {\"devEngines\": {\"runtime\": {\"name\": \"node\", \"version\": \"not-a-range\"}}} 1`] = `

[Input]
  1 | {"devEngines": {"runtime": {"name": "node", "version": "not-a-range"}}}

`;

exports[`invalid(141): {\"devEngines\": {\"runtime\": {\"name\": \"node\", \"version\": \"not-a-range\"}}} 2`] = `

Message:
> 1 | {"devEngines": {"runtime": {"name": "node", "version": "not-a-range"}}}
    |                                                        ^^^^^^^^^^^^^ The \`devEngines.runtime\` \`version\` must be a valid version range string.

`;

exports[`invalid(142): {\"devEngines\": {\"runtime\": {\"name\": \"node\", \"version\": \"\"}}} 1`] = `

[Input]
  1 | {"devEngines": {"runtime": {"name": "node", "version": ""}}}

`;

exports[`invalid(142): {\"devEngines\": {\"runtime\": {\"name\": \"node\", \"version\": \"\"}}} 2`] = `

Message:
> 1 | {"devEngines": {"runtime": {"name": "node", "version": ""}}}
    |                                                        ^^ The \`devEngines.runtime\` \`version\` must be a valid version range string.

`;

exports[`invalid(143): {\"devEngines\": {\"runtime\": {\"name\": \"node\", \"onFail\": \"explode\"}}} 1`] = `

[Input]
  1 | {"devEngines": {"runtime": {"name": "node", "onFail": "explode"}}}

`;

exports[`invalid(143): {\"devEngines\": {\"runtime\": {\"name\": \"node\", \"onFail\": \"explode\"}}} 2`] = `

Message:
> 1 | {"devEngines": {"runtime": {"name": "node", "onFail": "explode"}}}
    |                                                       ^^^^^^^^^ The \`devEngines.runtime\` \`onFail\` must be one of "ignore", "warn", "error", or "download".

`;

exports[`invalid(144): {\"os\": [\"macos\"]} 1`] = `

[Input]
  1 | {"os": ["macos"]}

`;

exports[`invalid(144): {\"os\": [\"macos\"]} 2`] = `

Message:
> 1 | {"os": ["macos"]}
    |         ^^^^^^^ \`macos\` is not a recognized \`os\` value.

`;

exports[`invalid(145): {\"os\": [\"windows\"]} 1`] = `

[Input]
  1 | {"os": ["windows"]}

`;

exports[`invalid(145): {\"os\": [\"windows\"]} 2`] = `

Message:
> 1 | {"os": ["windows"]}
    |         ^^^^^^^^^ \`windows\` is not a recognized \`os\` value.

`;

exports[`invalid(146): {\"os\": [\"darwin\", \"osx\"]} 1`] = `

[Input]
  1 | {"os": ["darwin", "osx"]}

`;

exports[`invalid(146): {\"os\": [\"darwin\", \"osx\"]} 2`] = `

Message:
> 1 | {"os": ["darwin", "osx"]}
    |                   ^^^^^ \`osx\` is not a recognized \`os\` value.

`;

exports[`invalid(147): {\"os\": \"darwin\"} 1`] = `

[Input]
  1 | {"os": "darwin"}

`;

exports[`invalid(147): {\"os\": \"darwin\"} 2`] = `

Message:
> 1 | {"os": "darwin"}
    |        ^^^^^^^^ The \`os\` field must be an array.

`;

exports[`invalid(148): {\"os\": [42]} 1`] = `

[Input]
  1 | {"os": [42]}

`;

exports[`invalid(148): {\"os\": [42]} 2`] = `

Message:
> 1 | {"os": [42]}
    |         ^^ Each \`os\` value must be a string.

`;

exports[`invalid(149): {\"cpu\": [\"amd64\"]} 1`] = `

[Input]
  1 | {"cpu": ["amd64"]}

`;

exports[`invalid(149): {\"cpu\": [\"amd64\"]} 2`] = `

Message:
> 1 | {"cpu": ["amd64"]}
    |          ^^^^^^^ \`amd64\` is not a recognized \`cpu\` value.

`;

exports[`invalid(15): {\"version\": \" 1.0.0 \"} 1`] = `

[Input]
  1 | {"version": " 1.0.0 "}

`;

exports[`invalid(15): {\"version\": \" 1.0.0 \"} 2`] = `

Message:
> 1 | {"version": " 1.0.0 "}
    |             ^^^^^^^^^ \` 1.0.0 \` is not a valid semver version.

Output:
  1 | {"version": "1.0.0"}

`;

exports[`invalid(150): {\"cpu\": [\"x86_64\"]} 1`] = `

[Input]
  1 | {"cpu": ["x86_64"]}

`;

exports[`invalid(150): {\"cpu\": [\"x86_64\"]} 2`] = `

Message:
> 1 | {"cpu": ["x86_64"]}
    |          ^^^^^^^^ \`x86_64\` is not a recognized \`cpu\` value.

`;

exports[`invalid(151): {\"cpu\": [\"aarch64\"]} 1`] = `

[Input]
  1 | {"cpu": ["aarch64"]}

`;

exports[`invalid(151): {\"cpu\": [\"aarch64\"]} 2`] = `

Message:
> 1 | {"cpu": ["aarch64"]}
    |          ^^^^^^^^^ \`aarch64\` is not a recognized \`cpu\` value.

`;

exports[`invalid(152): {\"cpu\": \"x64\"} 1`] = `

[Input]
  1 | {"cpu": "x64"}

`;

exports[`invalid(152): {\"cpu\": \"x64\"} 2`] = `

Message:
> 1 | {"cpu": "x64"}
    |         ^^^^^ The \`cpu\` field must be an array.

`;

exports[`invalid(153): {\"cpu\": [42]} 1`] = `

[Input]
  1 | {"cpu": [42]}

`;

exports[`invalid(153): {\"cpu\": [42]} 2`] = `

Message:
> 1 | {"cpu": [42]}
    |          ^^ Each \`cpu\` value must be a string.

`;

exports[`invalid(154): {\"publishConfig\": \"public\"} 1`] = `

[Input]
  1 | {"publishConfig": "public"}

`;

exports[`invalid(154): {\"publishConfig\": \"public\"} 2`] = `

Message:
> 1 | {"publishConfig": "public"}
    |                   ^^^^^^^^ The \`publishConfig\` field must be an object.

`;

exports[`invalid(155): {\"publishConfig\": {\"access\": \"private\"}} 1`] = `

[Input]
  1 | {"publishConfig": {"access": "private"}}

`;

exports[`invalid(155): {\"publishConfig\": {\"access\": \"private\"}} 2`] = `

Message:
> 1 | {"publishConfig": {"access": "private"}}
    |                              ^^^^^^^^^ The \`publishConfig.access\` field must be "public" or "restricted".

`;

exports[`invalid(156): {\"publishConfig\": {\"access\": true}} 1`] = `

[Input]
  1 | {"publishConfig": {"access": true}}

`;

exports[`invalid(156): {\"publishConfig\": {\"access\": true}} 2`] = `

Message:
> 1 | {"publishConfig": {"access": true}}
    |                              ^^^^ The \`publishConfig.access\` field must be "public" or "restricted".

`;

exports[`invalid(157): {\"publishConfig\": {\"provenance\": \"true\"}} 1`] = `

[Input]
  1 | {"publishConfig": {"provenance": "true"}}

`;

exports[`invalid(157): {\"publishConfig\": {\"provenance\": \"true\"}} 2`] = `

Message:
> 1 | {"publishConfig": {"provenance": "true"}}
    |                                  ^^^^^^ The \`publishConfig.provenance\` field must be a boolean.

`;

exports[`invalid(158): {\"name\": \"foo\", \"publishConfig\": {\"access\": \"public\"}} 1`] = `

[Input]
  1 | {"name": "foo", "publishConfig": {"access": "public"}}

`;

exports[`invalid(158): {\"name\": \"foo\", \"publishConfig\": {\"access\": \"public\"}} 2`] = `

Message:
> 1 | {"name": "foo", "publishConfig": {"access": "public"}}
    |                                   ^^^^^^^^ \`publishConfig.access\` has no effect for an unscoped package.

Suggestion 1/1: Remove the \`access\` field.:
  1 | {"name": "foo", "publishConfig": {}}

`;

exports[`invalid(159): {\"name\": \"foo\", \"publishConfig\": {\"access\": \"restricted\"}} 1`] = `

[Input]
  1 | {"name": "foo", "publishConfig": {"access": "restricted"}}

`;

exports[`invalid(159): {\"name\": \"foo\", \"publishConfig\": {\"access\": \"restricted\"}} 2`] = `

Message:
> 1 | {"name": "foo", "publishConfig": {"access": "restricted"}}
    |                                   ^^^^^^^^ \`publishConfig.access\` has no effect for an unscoped package.

Suggestion 1/1: Remove the \`access\` field.:
  1 | {"name": "foo", "publishConfig": {}}

`;

exports[`invalid(16): {\"version\": \"v1.2.3+build.5\"} 1`] = `

[Input]
  1 | {"version": "v1.2.3+build.5"}

`;

exports[`invalid(16): {\"version\": \"v1.2.3+build.5\"} 2`] = `

Message:
> 1 | {"version": "v1.2.3+build.5"}
    |             ^^^^^^^^^^^^^^^^ \`v1.2.3+build.5\` is not a valid semver version.

Output:
  1 | {"version": "1.2.3+build.5"}

`;

exports[`invalid(160): {\"publishConfig\": {\"tag\": \"\"}} 1`] = `

[Input]
  1 | {"publishConfig": {"tag": ""}}

`;

exports[`invalid(160): {\"publishConfig\": {\"tag\": \"\"}} 2`] = `

Message:
> 1 | {"publishConfig": {"tag": ""}}
    |                           ^^ The \`publishConfig.tag\` field must be a non-empty string that is not a valid SemVer range.

`;

exports[`invalid(161): {\"publishConfig\": {\"tag\": 42}} 1`] = `

[Input]
  1 | {"publishConfig": {"tag": 42}}

`;

exports[`invalid(161): {\"publishConfig\": {\"tag\": 42}} 2`] = `

Message:
> 1 | {"publishConfig": {"tag": 42}}
    |                           ^^ The \`publishConfig.tag\` field must be a non-empty string that is not a valid SemVer range.

`;

exports[`invalid(162): {\"publishConfig\": {\"registry\": \"npm.example.com\"}} 1`] = `

[Input]
  1 | {"publishConfig": {"registry": "npm.example.com"}}

`;

exports[`invalid(162): {\"publishConfig\": {\"registry\": \"npm.example.com\"}} 2`] = `

Message:
> 1 | {"publishConfig": {"registry": "npm.example.com"}}
    |                                ^^^^^^^^^^^^^^^^^ The \`publishConfig.registry\` field must be a valid \`http(s)\` URL.

`;

exports[`invalid(163): {\"publishConfig\": {\"registry\": true}} 1`] = `

[Input]
  1 | {"publishConfig": {"registry": true}}

`;

exports[`invalid(163): {\"publishConfig\": {\"registry\": true}} 2`] = `

Message:
> 1 | {"publishConfig": {"registry": true}}
    |                                ^^^^ The \`publishConfig.registry\` field must be a valid \`http(s)\` URL.

`;

exports[`invalid(164): {\"packageManager\": \"pnpm\"} 1`] = `

[Input]
  1 | {"packageManager": "pnpm"}

`;

exports[`invalid(164): {\"packageManager\": \"pnpm\"} 2`] = `

Message:
> 1 | {"packageManager": "pnpm"}
    |                    ^^^^^^ The \`packageManager\` field must be \`npm\`, \`yarn\`, \`pnpm\`, or \`bun\` at an exact version (e.g. \`pnpm@9.1.0\`).

`;

exports[`invalid(165): {\"packageManager\": \"pnpm@latest\"} 1`] = `

[Input]
  1 | {"packageManager": "pnpm@latest"}

`;

exports[`invalid(165): {\"packageManager\": \"pnpm@latest\"} 2`] = `

Message:
> 1 | {"packageManager": "pnpm@latest"}
    |                    ^^^^^^^^^^^^^ The \`packageManager\` field must be \`npm\`, \`yarn\`, \`pnpm\`, or \`bun\` at an exact version (e.g. \`pnpm@9.1.0\`).

`;

exports[`invalid(166): {\"packageManager\": \"yarn@^3\"} 1`] = `

[Input]
  1 | {"packageManager": "yarn@^3"}

`;

exports[`invalid(166): {\"packageManager\": \"yarn@^3\"} 2`] = `

Message:
> 1 | {"packageManager": "yarn@^3"}
    |                    ^^^^^^^^^ The \`packageManager\` field must be \`npm\`, \`yarn\`, \`pnpm\`, or \`bun\` at an exact version (e.g. \`pnpm@9.1.0\`).

`;

exports[`invalid(167): {\"packageManager\": \"pnpm@8\"} 1`] = `

[Input]
  1 | {"packageManager": "pnpm@8"}

`;

exports[`invalid(167): {\"packageManager\": \"pnpm@8\"} 2`] = `

Message:
> 1 | {"packageManager": "pnpm@8"}
    |                    ^^^^^^^^ The \`packageManager\` field must be \`npm\`, \`yarn\`, \`pnpm\`, or \`bun\` at an exact version (e.g. \`pnpm@9.1.0\`).

`;

exports[`invalid(168): {\"packageManager\": \"deno@1.0.0\"} 1`] = `

[Input]
  1 | {"packageManager": "deno@1.0.0"}

`;

exports[`invalid(168): {\"packageManager\": \"deno@1.0.0\"} 2`] = `

Message:
> 1 | {"packageManager": "deno@1.0.0"}
    |                    ^^^^^^^^^^^^ The \`packageManager\` field must be \`npm\`, \`yarn\`, \`pnpm\`, or \`bun\` at an exact version (e.g. \`pnpm@9.1.0\`).

`;

exports[`invalid(169): {\"scripts\": []} 1`] = `

[Input]
  1 | {"scripts": []}

`;

exports[`invalid(169): {\"scripts\": []} 2`] = `

Message:
> 1 | {"scripts": []}
    |             ^^ The \`scripts\` field must be an object.

`;

exports[`invalid(17): {\"private\": \"true\"} 1`] = `

[Input]
  1 | {"private": "true"}

`;

exports[`invalid(17): {\"private\": \"true\"} 2`] = `

Message:
> 1 | {"private": "true"}
    |             ^^^^^^ The \`private\` field must be a boolean.

`;

exports[`invalid(170): {\"scripts\": \"build\"} 1`] = `

[Input]
  1 | {"scripts": "build"}

`;

exports[`invalid(170): {\"scripts\": \"build\"} 2`] = `

Message:
> 1 | {"scripts": "build"}
    |             ^^^^^^^ The \`scripts\` field must be an object.

`;

exports[`invalid(171): {\"scripts\": {\"build\": 1}} 1`] = `

[Input]
  1 | {"scripts": {"build": 1}}

`;

exports[`invalid(171): {\"scripts\": {\"build\": 1}} 2`] = `

Message:
> 1 | {"scripts": {"build": 1}}
    |                       ^ The \`build\` script must be a string.

`;

exports[`invalid(172): {\"scripts\": {\"build\": \"tsc\", \"test\": false}} 1`] = `

[Input]
  1 | {"scripts": {"build": "tsc", "test": false}}

`;

exports[`invalid(172): {\"scripts\": {\"build\": \"tsc\", \"test\": false}} 2`] = `

Message:
> 1 | {"scripts": {"build": "tsc", "test": false}}
    |                                      ^^^^^ The \`test\` script must be a string.

`;

exports[`invalid(173): {\"files\": \"dist\"} 1`] = `

[Input]
  1 | {"files": "dist"}

`;

exports[`invalid(173): {\"files\": \"dist\"} 2`] = `

Message:
> 1 | {"files": "dist"}
    |           ^^^^^^ The \`files\` field must be an array.

`;

exports[`invalid(174): {\"files\": [\"node_modules\"]} 1`] = `

[Input]
  1 | {"files": ["node_modules"]}

`;

exports[`invalid(174): {\"files\": [\"node_modules\"]} 2`] = `

Message:
> 1 | {"files": ["node_modules"]}
    |            ^^^^^^^^^^^^^^ \`node_modules\` is always ignored by npm and cannot be published.

Output:
  1 | {"files": []}

`;

exports[`invalid(175): {\"files\": [\"node_modules/foo\"]} 1`] = `

[Input]
  1 | {"files": ["node_modules/foo"]}

`;

exports[`invalid(175): {\"files\": [\"node_modules/foo\"]} 2`] = `

Message:
> 1 | {"files": ["node_modules/foo"]}
    |            ^^^^^^^^^^^^^^^^^^ \`node_modules/foo\` is always ignored by npm and cannot be published.

Output:
  1 | {"files": []}

`;

exports[`invalid(176): {\"files\": [\"yarn.lock\"]} 1`] = `

[Input]
  1 | {"files": ["yarn.lock"]}

`;

exports[`invalid(176): {\"files\": [\"yarn.lock\"]} 2`] = `

Message:
> 1 | {"files": ["yarn.lock"]}
    |            ^^^^^^^^^^^ \`yarn.lock\` is always ignored by npm and cannot be published.

Output:
  1 | {"files": []}

`;

exports[`invalid(177): {\"files\": [\"bun.lockb\"]} 1`] = `

[Input]
  1 | {"files": ["bun.lockb"]}

`;

exports[`invalid(177): {\"files\": [\"bun.lockb\"]} 2`] = `

Message:
> 1 | {"files": ["bun.lockb"]}
    |            ^^^^^^^^^^^ \`bun.lockb\` is always ignored by npm and cannot be published.

Output:
  1 | {"files": []}

`;

exports[`invalid(178): {\"files\": [\"dist\", \".git\"]} 1`] = `

[Input]
  1 | {"files": ["dist", ".git"]}

`;

exports[`invalid(178): {\"files\": [\"dist\", \".git\"]} 2`] = `

Message:
> 1 | {"files": ["dist", ".git"]}
    |                    ^^^^^^ \`.git\` is always ignored by npm and cannot be published.

Output:
  1 | {"files": ["dist"]}

`;

exports[`invalid(179): {\"files\": [1]} 1`] = `

[Input]
  1 | {"files": [1]}

`;

exports[`invalid(179): {\"files\": [1]} 2`] = `

Message:
> 1 | {"files": [1]}
    |            ^ Each \`files\` entry must be a string.

`;

exports[`invalid(18): {\"private\": \"false\"} 1`] = `

[Input]
  1 | {"private": "false"}

`;

exports[`invalid(18): {\"private\": \"false\"} 2`] = `

Message:
> 1 | {"private": "false"}
    |             ^^^^^^^ The \`private\` field must be a boolean.

`;

exports[`invalid(180): {\"files\": [\"dist\", \"\"]} 1`] = `

[Input]
  1 | {"files": ["dist", ""]}

`;

exports[`invalid(180): {\"files\": [\"dist\", \"\"]} 2`] = `

Message:
> 1 | {"files": ["dist", ""]}
    |                    ^^ A \`files\` entry must not be empty.

Output:
  1 | {"files": ["dist"]}

`;

exports[`invalid(181): {\"workspaces\": \"packages/*\"} 1`] = `

[Input]
  1 | {"workspaces": "packages/*"}

`;

exports[`invalid(181): {\"workspaces\": \"packages/*\"} 2`] = `

Message:
> 1 | {"workspaces": "packages/*"}
    |                ^^^^^^^^^^^^ The \`workspaces\` field must be an array of globs.

`;

exports[`invalid(182): {\"workspaces\": [\"packages/*\", 1]} 1`] = `

[Input]
  1 | {"workspaces": ["packages/*", 1]}

`;

exports[`invalid(182): {\"workspaces\": [\"packages/*\", 1]} 2`] = `

Message:
> 1 | {"workspaces": ["packages/*", 1]}
    |                               ^ Each \`workspaces\` entry must be a string.

`;

exports[`invalid(183): {\"workspaces\": null} 1`] = `

[Input]
  1 | {"workspaces": null}

`;

exports[`invalid(183): {\"workspaces\": null} 2`] = `

Message:
> 1 | {"workspaces": null}
    |                ^^^^ The \`workspaces\` field must be an array of globs.

`;

exports[`invalid(184): {\"keywords\": \"eslint\"} 1`] = `

[Input]
  1 | {"keywords": "eslint"}

`;

exports[`invalid(184): {\"keywords\": \"eslint\"} 2`] = `

Message:
> 1 | {"keywords": "eslint"}
    |              ^^^^^^^^ The \`keywords\` field must be an array.

`;

exports[`invalid(185): {\"keywords\": {\"0\": \"eslint\"}} 1`] = `

[Input]
  1 | {"keywords": {"0": "eslint"}}

`;

exports[`invalid(185): {\"keywords\": {\"0\": \"eslint\"}} 2`] = `

Message:
> 1 | {"keywords": {"0": "eslint"}}
    |              ^^^^^^^^^^^^^^^ The \`keywords\` field must be an array.

`;

exports[`invalid(186): {\"keywords\": [\"eslint\", 1]} 1`] = `

[Input]
  1 | {"keywords": ["eslint", 1]}

`;

exports[`invalid(186): {\"keywords\": [\"eslint\", 1]} 2`] = `

Message:
> 1 | {"keywords": ["eslint", 1]}
    |                         ^ Each keyword must be a string.

`;

exports[`invalid(187): {\"keywords\": [\"eslint\", \"\"]} 1`] = `

[Input]
  1 | {"keywords": ["eslint", ""]}

`;

exports[`invalid(187): {\"keywords\": [\"eslint\", \"\"]} 2`] = `

Message:
> 1 | {"keywords": ["eslint", ""]}
    |                         ^^ Keyword must not be empty or only whitespace.

Suggestion 1/1: Remove this keyword.:
  1 | {"keywords": ["eslint"]}

`;

exports[`invalid(188): {\"keywords\": [\"eslint\", \"  \"]} 1`] = `

[Input]
  1 | {"keywords": ["eslint", "  "]}

`;

exports[`invalid(188): {\"keywords\": [\"eslint\", \"  \"]} 2`] = `

Message:
> 1 | {"keywords": ["eslint", "  "]}
    |                         ^^^^ Keyword must not be empty or only whitespace.

Suggestion 1/1: Remove this keyword.:
  1 | {"keywords": ["eslint"]}

`;

exports[`invalid(189): {\"keywords\": [\"eslint, json, package\"]} 1`] = `

[Input]
  1 | {"keywords": ["eslint, json, package"]}

`;

exports[`invalid(189): {\"keywords\": [\"eslint, json, package\"]} 2`] = `

Message:
> 1 | {"keywords": ["eslint, json, package"]}
    |               ^^^^^^^^^^^^^^^^^^^^^^^ Keyword \`eslint, json, package\` looks like several comma-separated keywords. Split it into separate entries.

`;

exports[`invalid(19): {\"private\": 1} 1`] = `

[Input]
  1 | {"private": 1}

`;

exports[`invalid(19): {\"private\": 1} 2`] = `

Message:
> 1 | {"private": 1}
    |             ^ The \`private\` field must be a boolean.

`;

exports[`invalid(190): {\"keywords\": [\"eslint\", \" json\"]} 1`] = `

[Input]
  1 | {"keywords": ["eslint", " json"]}

`;

exports[`invalid(190): {\"keywords\": [\"eslint\", \" json\"]} 2`] = `

Message:
> 1 | {"keywords": ["eslint", " json"]}
    |                         ^^^^^^^ Keyword \` json\` has leading or trailing whitespace.

`;

exports[`invalid(191): {\"keywords\": [\"react \", \"vue\"]} 1`] = `

[Input]
  1 | {"keywords": ["react ", "vue"]}

`;

exports[`invalid(191): {\"keywords\": [\"react \", \"vue\"]} 2`] = `

Message:
> 1 | {"keywords": ["react ", "vue"]}
    |               ^^^^^^^^ Keyword \`react \` has leading or trailing whitespace.

`;

exports[`invalid(192): {\"name\": \"ky\", \"keywords\": [\"ky\", \"http\"]} 1`] = `

[Input]
  1 | {"name": "ky", "keywords": ["ky", "http"]}

`;

exports[`invalid(192): {\"name\": \"ky\", \"keywords\": [\"ky\", \"http\"]} 2`] = `

Message:
> 1 | {"name": "ky", "keywords": ["ky", "http"]}
    |                             ^^^^ Keyword \`ky\` is redundant with the package name.

Suggestion 1/1: Remove this keyword.:
  1 | {"name": "ky", "keywords": ["http"]}

`;

exports[`invalid(193): {\"name\": \"ky\", \"keywords\": [\"Ky\"]} 1`] = `

[Input]
  1 | {"name": "ky", "keywords": ["Ky"]}

`;

exports[`invalid(193): {\"name\": \"ky\", \"keywords\": [\"Ky\"]} 2`] = `

Message:
> 1 | {"name": "ky", "keywords": ["Ky"]}
    |                             ^^^^ Keyword \`Ky\` is redundant with the package name.

Suggestion 1/1: Remove this keyword.:
  1 | {"name": "ky", "keywords": []}

`;

exports[`invalid(194): {\"keywords\": [\"React\"]} 1`] = `

[Input]
  1 | {"keywords": ["React"]}

`;

exports[`invalid(194): {\"keywords\": [\"React\"]} 2`] = `

Message:
> 1 | {"keywords": ["React"]}
    |               ^^^^^^^ Keyword \`React\` should be lowercase.

Suggestion 1/1: Convert to lowercase.:
  1 | {"keywords": ["react"]}

`;

exports[`invalid(195): {\"keywords\": [\"eslint\", \"JSON\"]} 1`] = `

[Input]
  1 | {"keywords": ["eslint", "JSON"]}

`;

exports[`invalid(195): {\"keywords\": [\"eslint\", \"JSON\"]} 2`] = `

Message:
> 1 | {"keywords": ["eslint", "JSON"]}
    |                         ^^^^^^ Keyword \`JSON\` should be lowercase.

Suggestion 1/1: Convert to lowercase.:
  1 | {"keywords": ["eslint", "json"]}

`;

exports[`invalid(196): {\"keywords\": [\"eslint\", \"json\", \"eslint\"]} 1`] = `

[Input]
  1 | {"keywords": ["eslint", "json", "eslint"]}

`;

exports[`invalid(196): {\"keywords\": [\"eslint\", \"json\", \"eslint\"]} 2`] = `

Message:
> 1 | {"keywords": ["eslint", "json", "eslint"]}
    |                                 ^^^^^^^^ Keyword \`eslint\` is duplicated.

Suggestion 1/1: Remove this keyword.:
  1 | {"keywords": ["eslint", "json"]}

`;

exports[`invalid(197): {\"dependencies\": [\"foo\"]} 1`] = `

[Input]
  1 | {"dependencies": ["foo"]}

`;

exports[`invalid(197): {\"dependencies\": [\"foo\"]} 2`] = `

Message:
> 1 | {"dependencies": ["foo"]}
    |                  ^^^^^^^ The \`dependencies\` field must be an object.

`;

exports[`invalid(198): {\"dependencies\": \"foo\"} 1`] = `

[Input]
  1 | {"dependencies": "foo"}

`;

exports[`invalid(198): {\"dependencies\": \"foo\"} 2`] = `

Message:
> 1 | {"dependencies": "foo"}
    |                  ^^^^^ The \`dependencies\` field must be an object.

`;

exports[`invalid(199): {\"devDependencies\": 1} 1`] = `

[Input]
  1 | {"devDependencies": 1}

`;

exports[`invalid(199): {\"devDependencies\": 1} 2`] = `

Message:
> 1 | {"devDependencies": 1}
    |                     ^ The \`devDependencies\` field must be an object.

`;

exports[`invalid(2): {\"name\": \" foo\"} 1`] = `

[Input]
  1 | {"name": " foo"}

`;

exports[`invalid(2): {\"name\": \" foo\"} 2`] = `

Message:
> 1 | {"name": " foo"}
    |          ^^^^^^ Invalid package name: name cannot contain leading or trailing spaces.

`;

exports[`invalid(20): {\"description\": 42} 1`] = `

[Input]
  1 | {"description": 42}

`;

exports[`invalid(20): {\"description\": 42} 2`] = `

Message:
> 1 | {"description": 42}
    |                 ^^ The \`description\` field must be a string.

`;

exports[`invalid(200): {\"dependencies\": {\"foo\": 123}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": 123}}

`;

exports[`invalid(200): {\"dependencies\": {\"foo\": 123}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": 123}}
    |                          ^^^ The version of \`foo\` in \`dependencies\` must be a string.

`;

exports[`invalid(201): {\"dependencies\": {\"foo\": null}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": null}}

`;

exports[`invalid(201): {\"dependencies\": {\"foo\": null}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": null}}
    |                          ^^^^ The version of \`foo\` in \`dependencies\` must be a string.

`;

exports[`invalid(202): {\"dependencies\": {\"foo\": {\"version\": \"1.0.0\"}}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": {"version": "1.0.0"}}}

`;

exports[`invalid(202): {\"dependencies\": {\"foo\": {\"version\": \"1.0.0\"}}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": {"version": "1.0.0"}}}
    |                          ^^^^^^^^^^^^^^^^^^^^ The version of \`foo\` in \`dependencies\` must be a string.

`;

exports[`invalid(203): {\"peerDependencies\": {\"foo\": true}} 1`] = `

[Input]
  1 | {"peerDependencies": {"foo": true}}

`;

exports[`invalid(203): {\"peerDependencies\": {\"foo\": true}} 2`] = `

Message:
> 1 | {"peerDependencies": {"foo": true}}
    |                              ^^^^ The version of \`foo\` in \`peerDependencies\` must be a string.

`;

exports[`invalid(204): {\"peerDependenciesMeta\": {\"a\": {\"optional\": true}}} 1`] = `

[Input]
  1 | {"peerDependenciesMeta": {"a": {"optional": true}}}

`;

exports[`invalid(204): {\"peerDependenciesMeta\": {\"a\": {\"optional\": true}}} 2`] = `

Message:
> 1 | {"peerDependenciesMeta": {"a": {"optional": true}}}
    |                           ^^^ \`a\` is in \`peerDependenciesMeta\` but not in \`peerDependencies\`.

Suggestion 1/1: Remove the orphaned entry.:
  1 | {"peerDependenciesMeta": {}}

`;

exports[`invalid(205): {\"peerDependenciesMeta\": {\"a\": {\"optional\": false}}} 1`] = `

[Input]
  1 | {"peerDependenciesMeta": {"a": {"optional": false}}}

`;

exports[`invalid(205): {\"peerDependenciesMeta\": {\"a\": {\"optional\": false}}} 2`] = `

Message:
> 1 | {"peerDependenciesMeta": {"a": {"optional": false}}}
    |                           ^^^ \`a\` is in \`peerDependenciesMeta\` but not in \`peerDependencies\`.

Suggestion 1/1: Remove the orphaned entry.:
  1 | {"peerDependenciesMeta": {}}

`;

exports[`invalid(205): {\"peerDependenciesMeta\": {\"a\": {\"optional\": false}}} 3`] = `

Message:
> 1 | {"peerDependenciesMeta": {"a": {"optional": false}}}
    |                                 ^^^^^^^^^^ \`peerDependenciesMeta.a.optional\` is redundant because \`false\` is the default.

Output:
  1 | {"peerDependenciesMeta": {"a": {}}}

`;

exports[`invalid(206): {\"peerDependencies\": {\"a\": \"1.0.0\"}, \"peerDependenciesMeta\": {\"a\": {\"optional\": true}, \"b\": {\"optional\": true}}} 1`] = `

[Input]
  1 | {"peerDependencies": {"a": "1.0.0"}, "peerDependenciesMeta": {"a": {"optional": true}, "b": {"optional": true}}}

`;

exports[`invalid(206): {\"peerDependencies\": {\"a\": \"1.0.0\"}, \"peerDependenciesMeta\": {\"a\": {\"optional\": true}, \"b\": {\"optional\": true}}} 2`] = `

Message:
> 1 | {"peerDependencies": {"a": "1.0.0"}, "peerDependenciesMeta": {"a": {"optional": true}, "b": {"optional": true}}}
    |                                                                                        ^^^ \`b\` is in \`peerDependenciesMeta\` but not in \`peerDependencies\`.

Suggestion 1/1: Remove the orphaned entry.:
  1 | {"peerDependencies": {"a": "1.0.0"}, "peerDependenciesMeta": {"a": {"optional": true}}}

`;

exports[`invalid(207): {\"peerDependencies\": {\"a\": \"1.0.0\"}, \"peerDependenciesMeta\": {\"a\": {\"optional\": false}}} 1`] = `

[Input]
  1 | {"peerDependencies": {"a": "1.0.0"}, "peerDependenciesMeta": {"a": {"optional": false}}}

`;

exports[`invalid(207): {\"peerDependencies\": {\"a\": \"1.0.0\"}, \"peerDependenciesMeta\": {\"a\": {\"optional\": false}}} 2`] = `

Message:
> 1 | {"peerDependencies": {"a": "1.0.0"}, "peerDependenciesMeta": {"a": {"optional": false}}}
    |                                                                     ^^^^^^^^^^ \`peerDependenciesMeta.a.optional\` is redundant because \`false\` is the default.

Output:
  1 | {"peerDependencies": {"a": "1.0.0"}, "peerDependenciesMeta": {"a": {}}}

`;

exports[`invalid(208): {\n\t\"peerDependencies\": {\n\t\t\"a\": \"1.0.0\"\n\t},\n\t\"peerDependenciesMeta\": {\n\t\t\"a\": {\n\t\t\t\"before\": true,\n\t\t\t\"optional\": false,\n\t\t\t\"after\": true\n\t\t}\n\t}\n} 1`] = `

[Input]
   1 | {
   2 | 	"peerDependencies": {
   3 | 		"a": "1.0.0"
   4 | 	},
   5 | 	"peerDependenciesMeta": {
   6 | 		"a": {
   7 | 			"before": true,
   8 | 			"optional": false,
   9 | 			"after": true
  10 | 		}
  11 | 	}
  12 | }

`;

exports[`invalid(208): {\n\t\"peerDependencies\": {\n\t\t\"a\": \"1.0.0\"\n\t},\n\t\"peerDependenciesMeta\": {\n\t\t\"a\": {\n\t\t\t\"before\": true,\n\t\t\t\"optional\": false,\n\t\t\t\"after\": true\n\t\t}\n\t}\n} 2`] = `

Message:
   1 | {
   2 | 	"peerDependencies": {
   3 | 		"a": "1.0.0"
   4 | 	},
   5 | 	"peerDependenciesMeta": {
   6 | 		"a": {
   7 | 			"before": true,
>  8 | 			"optional": false,
     | 			^^^^^^^^^^ \`peerDependenciesMeta.a.optional\` is redundant because \`false\` is the default.
   9 | 			"after": true
  10 | 		}
  11 | 	}
  12 | }

Output:
   1 | {
   2 | 	"peerDependencies": {
   3 | 		"a": "1.0.0"
   4 | 	},
   5 | 	"peerDependenciesMeta": {
   6 | 		"a": {
   7 | 			"before": true,
   8 | 			"after": true
   9 | 		}
  10 | 	}
  11 | }

`;

exports[`invalid(209): {\n\t\"peerDependencies\": {\n\t\t\"a\": \"1.0.0\"\n\t},\n\t\"peerDependenciesMeta\": {\n\t\t\"a\": {\n\t\t\t\"before\": true,\n\t\t\t\"optional\": false\n\t\t}\n\t}\n} 1`] = `

[Input]
   1 | {
   2 | 	"peerDependencies": {
   3 | 		"a": "1.0.0"
   4 | 	},
   5 | 	"peerDependenciesMeta": {
   6 | 		"a": {
   7 | 			"before": true,
   8 | 			"optional": false
   9 | 		}
  10 | 	}
  11 | }

`;

exports[`invalid(209): {\n\t\"peerDependencies\": {\n\t\t\"a\": \"1.0.0\"\n\t},\n\t\"peerDependenciesMeta\": {\n\t\t\"a\": {\n\t\t\t\"before\": true,\n\t\t\t\"optional\": false\n\t\t}\n\t}\n} 2`] = `

Message:
   1 | {
   2 | 	"peerDependencies": {
   3 | 		"a": "1.0.0"
   4 | 	},
   5 | 	"peerDependenciesMeta": {
   6 | 		"a": {
   7 | 			"before": true,
>  8 | 			"optional": false
     | 			^^^^^^^^^^ \`peerDependenciesMeta.a.optional\` is redundant because \`false\` is the default.
   9 | 		}
  10 | 	}
  11 | }

Output:
   1 | {
   2 | 	"peerDependencies": {
   3 | 		"a": "1.0.0"
   4 | 	},
   5 | 	"peerDependenciesMeta": {
   6 | 		"a": {
   7 | 			"before": true
   8 | 		}
   9 | 	}
  10 | }

`;

exports[`invalid(21): {\"description\": [\"a\", \"b\"]} 1`] = `

[Input]
  1 | {"description": ["a", "b"]}

`;

exports[`invalid(21): {\"description\": [\"a\", \"b\"]} 2`] = `

Message:
> 1 | {"description": ["a", "b"]}
    |                 ^^^^^^^^^^ The \`description\` field must be a string.

`;

exports[`invalid(210): {\"bundledDependencies\": \"foo\"} 1`] = `

[Input]
  1 | {"bundledDependencies": "foo"}

`;

exports[`invalid(210): {\"bundledDependencies\": \"foo\"} 2`] = `

Message:
> 1 | {"bundledDependencies": "foo"}
    |                         ^^^^^ The \`bundledDependencies\` field must be an array or a boolean.

`;

exports[`invalid(211): {\"bundledDependencies\": [1]} 1`] = `

[Input]
  1 | {"bundledDependencies": [1]}

`;

exports[`invalid(211): {\"bundledDependencies\": [1]} 2`] = `

Message:
> 1 | {"bundledDependencies": [1]}
    |                          ^ Each \`bundledDependencies\` entry must be a string.

`;

exports[`invalid(212): {\"bundledDependencies\": [\"foo\"]} 1`] = `

[Input]
  1 | {"bundledDependencies": ["foo"]}

`;

exports[`invalid(212): {\"bundledDependencies\": [\"foo\"]} 2`] = `

Message:
> 1 | {"bundledDependencies": ["foo"]}
    |                          ^^^^^ \`foo\` is bundled but not listed in \`dependencies\` or \`optionalDependencies\`.

`;

exports[`invalid(213): {\"dependencies\": {\"foo\": \"^1.0.0\"}, \"bundledDependencies\": [\"foo\", \"bar\"]} 1`] = `

[Input]
  1 | {"dependencies": {"foo": "^1.0.0"}, "bundledDependencies": ["foo", "bar"]}

`;

exports[`invalid(213): {\"dependencies\": {\"foo\": \"^1.0.0\"}, \"bundledDependencies\": [\"foo\", \"bar\"]} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "^1.0.0"}, "bundledDependencies": ["foo", "bar"]}
    |                                                                    ^^^^^ \`bar\` is bundled but not listed in \`dependencies\` or \`optionalDependencies\`.

`;

exports[`invalid(214): {\"peerDependencies\": {\"foo\": \">=1\"}, \"bundledDependencies\": [\"foo\"]} 1`] = `

[Input]
  1 | {"peerDependencies": {"foo": ">=1"}, "bundledDependencies": ["foo"]}

`;

exports[`invalid(214): {\"peerDependencies\": {\"foo\": \">=1\"}, \"bundledDependencies\": [\"foo\"]} 2`] = `

Message:
> 1 | {"peerDependencies": {"foo": ">=1"}, "bundledDependencies": ["foo"]}
    |                                                              ^^^^^ \`foo\` is bundled but not listed in \`dependencies\` or \`optionalDependencies\`.

`;

exports[`invalid(215): {\"overrides\": [\"foo\"]} 1`] = `

[Input]
  1 | {"overrides": ["foo"]}

`;

exports[`invalid(215): {\"overrides\": [\"foo\"]} 2`] = `

Message:
> 1 | {"overrides": ["foo"]}
    |               ^^^^^^^ The \`overrides\` field must be an object.

`;

exports[`invalid(216): {\"overrides\": \"1.0.0\"} 1`] = `

[Input]
  1 | {"overrides": "1.0.0"}

`;

exports[`invalid(216): {\"overrides\": \"1.0.0\"} 2`] = `

Message:
> 1 | {"overrides": "1.0.0"}
    |               ^^^^^^^ The \`overrides\` field must be an object.

`;

exports[`invalid(217): {\"overrides\": null} 1`] = `

[Input]
  1 | {"overrides": null}

`;

exports[`invalid(217): {\"overrides\": null} 2`] = `

Message:
> 1 | {"overrides": null}
    |               ^^^^ The \`overrides\` field must be an object.

`;

exports[`invalid(218): {\"overrides\": {\"foo\": 1}} 1`] = `

[Input]
  1 | {"overrides": {"foo": 1}}

`;

exports[`invalid(218): {\"overrides\": {\"foo\": 1}} 2`] = `

Message:
> 1 | {"overrides": {"foo": 1}}
    |                       ^ The \`foo\` override must be a version string or a nested overrides object.

`;

exports[`invalid(219): {\"overrides\": {\"foo\": true}} 1`] = `

[Input]
  1 | {"overrides": {"foo": true}}

`;

exports[`invalid(219): {\"overrides\": {\"foo\": true}} 2`] = `

Message:
> 1 | {"overrides": {"foo": true}}
    |                       ^^^^ The \`foo\` override must be a version string or a nested overrides object.

`;

exports[`invalid(22): {\"license\": \"MITT\"} 1`] = `

[Input]
  1 | {"license": "MITT"}

`;

exports[`invalid(22): {\"license\": \"MITT\"} 2`] = `

Message:
> 1 | {"license": "MITT"}
    |             ^^^^^^ \`MITT\` is not a valid SPDX license expression.

`;

exports[`invalid(220): {\"overrides\": {\"foo\": null}} 1`] = `

[Input]
  1 | {"overrides": {"foo": null}}

`;

exports[`invalid(220): {\"overrides\": {\"foo\": null}} 2`] = `

Message:
> 1 | {"overrides": {"foo": null}}
    |                       ^^^^ The \`foo\` override must be a version string or a nested overrides object.

`;

exports[`invalid(221): {\"overrides\": {\"foo\": {\"bar\": 1}}} 1`] = `

[Input]
  1 | {"overrides": {"foo": {"bar": 1}}}

`;

exports[`invalid(221): {\"overrides\": {\"foo\": {\"bar\": 1}}} 2`] = `

Message:
> 1 | {"overrides": {"foo": {"bar": 1}}}
    |                               ^ The \`bar\` override must be a version string or a nested overrides object.

`;

exports[`invalid(222): {\"publishConfig\": {\"tag\": \"1.0.0\"}} 1`] = `

[Input]
  1 | {"publishConfig": {"tag": "1.0.0"}}

`;

exports[`invalid(222): {\"publishConfig\": {\"tag\": \"1.0.0\"}} 2`] = `

Message:
> 1 | {"publishConfig": {"tag": "1.0.0"}}
    |                           ^^^^^^^ The \`publishConfig.tag\` field must be a non-empty string that is not a valid SemVer range.

`;

exports[`invalid(223): {\"publishConfig\": {\"tag\": \"v1.4\"}} 1`] = `

[Input]
  1 | {"publishConfig": {"tag": "v1.4"}}

`;

exports[`invalid(223): {\"publishConfig\": {\"tag\": \"v1.4\"}} 2`] = `

Message:
> 1 | {"publishConfig": {"tag": "v1.4"}}
    |                           ^^^^^^ The \`publishConfig.tag\` field must be a non-empty string that is not a valid SemVer range.

`;

exports[`invalid(23): {\"license\": \"Foo Bar\"} 1`] = `

[Input]
  1 | {"license": "Foo Bar"}

`;

exports[`invalid(23): {\"license\": \"Foo Bar\"} 2`] = `

Message:
> 1 | {"license": "Foo Bar"}
    |             ^^^^^^^^^ \`Foo Bar\` is not a valid SPDX license expression.

`;

exports[`invalid(24): {\"license\": \"\"} 1`] = `

[Input]
  1 | {"license": ""}

`;

exports[`invalid(24): {\"license\": \"\"} 2`] = `

Message:
> 1 | {"license": ""}
    |             ^^ \`\` is not a valid SPDX license expression.

`;

exports[`invalid(25): {\"license\": \"SEE LICENSE IN \"} 1`] = `

[Input]
  1 | {"license": "SEE LICENSE IN "}

`;

exports[`invalid(25): {\"license\": \"SEE LICENSE IN \"} 2`] = `

Message:
> 1 | {"license": "SEE LICENSE IN "}
    |             ^^^^^^^^^^^^^^^^^ \`SEE LICENSE IN \` is not a valid SPDX license expression.

`;

exports[`invalid(26): {\"license\": {\"type\": \"MIT\", \"url\": \"https://example.com\"}} 1`] = `

[Input]
  1 | {"license": {"type": "MIT", "url": "https://example.com"}}

`;

exports[`invalid(26): {\"license\": {\"type\": \"MIT\", \"url\": \"https://example.com\"}} 2`] = `

Message:
> 1 | {"license": {"type": "MIT", "url": "https://example.com"}}
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use an SPDX license expression string instead of the deprecated \`{type, url}\` object.

Suggestion 1/1: Replace with the SPDX expression string.:
  1 | {"license": "MIT"}

`;

exports[`invalid(27): {\"license\": {\"url\": \"https://example.com\"}} 1`] = `

[Input]
  1 | {"license": {"url": "https://example.com"}}

`;

exports[`invalid(27): {\"license\": {\"url\": \"https://example.com\"}} 2`] = `

Message:
> 1 | {"license": {"url": "https://example.com"}}
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use an SPDX license expression string instead of the deprecated \`{type, url}\` object.

`;

exports[`invalid(28): {\"license\": 42} 1`] = `

[Input]
  1 | {"license": 42}

`;

exports[`invalid(28): {\"license\": 42} 2`] = `

Message:
> 1 | {"license": 42}
    |             ^^ The \`license\` field must be a string.

`;

exports[`invalid(29): {\"license\": null} 1`] = `

[Input]
  1 | {"license": null}

`;

exports[`invalid(29): {\"license\": null} 2`] = `

Message:
> 1 | {"license": null}
    |             ^^^^ The \`license\` field must be a string.

`;

exports[`invalid(3): {\"name\": \".foo\"} 1`] = `

[Input]
  1 | {"name": ".foo"}

`;

exports[`invalid(3): {\"name\": \".foo\"} 2`] = `

Message:
> 1 | {"name": ".foo"}
    |          ^^^^^^ Invalid package name: name cannot start with a period.

`;

exports[`invalid(30): {\"repository\": {\"type\": \"git\"}} 1`] = `

[Input]
  1 | {"repository": {"type": "git"}}

`;

exports[`invalid(30): {\"repository\": {\"type\": \"git\"}} 2`] = `

Message:
> 1 | {"repository": {"type": "git"}}
    |                ^^^^^^^^^^^^^^^ The \`repository\` object must have a string \`url\`.

`;

exports[`invalid(31): {\"repository\": {\"url\": 123}} 1`] = `

[Input]
  1 | {"repository": {"url": 123}}

`;

exports[`invalid(31): {\"repository\": {\"url\": 123}} 2`] = `

Message:
> 1 | {"repository": {"url": 123}}
    |                        ^^^ The \`repository\` \`url\` must be a string.

`;

exports[`invalid(32): {\"repository\": {\"url\": \"git+https://github.com/sindresorhus/foo.git\", \"type\": 1}} 1`] = `

[Input]
  1 | {"repository": {"url": "git+https://github.com/sindresorhus/foo.git", "type": 1}}

`;

exports[`invalid(32): {\"repository\": {\"url\": \"git+https://github.com/sindresorhus/foo.git\", \"type\": 1}} 2`] = `

Message:
> 1 | {"repository": {"url": "git+https://github.com/sindresorhus/foo.git", "type": 1}}
    |                                                                               ^ The \`repository\` \`type\` must be a string.

`;

exports[`invalid(33): {\"repository\": {\"url\": \"git+https://github.com/sindresorhus/foo.git\", \"directory\": false}} 1`] = `

[Input]
  1 | {"repository": {"url": "git+https://github.com/sindresorhus/foo.git", "directory": false}}

`;

exports[`invalid(33): {\"repository\": {\"url\": \"git+https://github.com/sindresorhus/foo.git\", \"directory\": false}} 2`] = `

Message:
> 1 | {"repository": {"url": "git+https://github.com/sindresorhus/foo.git", "directory": false}}
    |                                                                                    ^^^^^ The \`repository\` \`directory\` must be a string.

`;

exports[`invalid(34): {\"repository\": \"not a url\"} 1`] = `

[Input]
  1 | {"repository": "not a url"}

`;

exports[`invalid(34): {\"repository\": \"not a url\"} 2`] = `

Message:
> 1 | {"repository": "not a url"}
    |                ^^^^^^^^^^^ The \`repository\` URL \`not a url\` is not a valid URL or shorthand.

`;

exports[`invalid(35): {\"repository\": {\"url\": \"http//bad\"}} 1`] = `

[Input]
  1 | {"repository": {"url": "http//bad"}}

`;

exports[`invalid(35): {\"repository\": {\"url\": \"http//bad\"}} 2`] = `

Message:
> 1 | {"repository": {"url": "http//bad"}}
    |                        ^^^^^^^^^^^ The \`repository\` URL \`http//bad\` is not a valid URL or shorthand.

`;

exports[`invalid(36): {\"repository\": \"mailto:owner@example.com\"} 1`] = `

[Input]
  1 | {"repository": "mailto:owner@example.com"}

`;

exports[`invalid(36): {\"repository\": \"mailto:owner@example.com\"} 2`] = `

Message:
> 1 | {"repository": "mailto:owner@example.com"}
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`repository\` URL \`mailto:owner@example.com\` is not a valid URL or shorthand.

`;

exports[`invalid(37): {\"repository\": 123} 1`] = `

[Input]
  1 | {"repository": 123}

`;

exports[`invalid(37): {\"repository\": 123} 2`] = `

Message:
> 1 | {"repository": 123}
    |                ^^^ The \`repository\` field must be a URL string or an object.

`;

exports[`invalid(38): {\"repository\": []} 1`] = `

[Input]
  1 | {"repository": []}

`;

exports[`invalid(38): {\"repository\": []} 2`] = `

Message:
> 1 | {"repository": []}
    |                ^^ The \`repository\` field must be a URL string or an object.

`;

exports[`invalid(39): {\"repository\": null} 1`] = `

[Input]
  1 | {"repository": null}

`;

exports[`invalid(39): {\"repository\": null} 2`] = `

Message:
> 1 | {"repository": null}
    |                ^^^^ The \`repository\` field must be a URL string or an object.

`;

exports[`invalid(4): {\"name\": \"foo bar\"} 1`] = `

[Input]
  1 | {"name": "foo bar"}

`;

exports[`invalid(4): {\"name\": \"foo bar\"} 2`] = `

Message:
> 1 | {"name": "foo bar"}
    |          ^^^^^^^^^ Invalid package name: name can only contain URL-friendly characters.

`;

exports[`invalid(40): {\"homepage\": \"git@github.com:user/repo.git\"} 1`] = `

[Input]
  1 | {"homepage": "git@github.com:user/repo.git"}

`;

exports[`invalid(40): {\"homepage\": \"git@github.com:user/repo.git\"} 2`] = `

Message:
> 1 | {"homepage": "git@github.com:user/repo.git"}
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`homepage\` field must be a valid \`http(s)\` URL.

`;

exports[`invalid(41): {\"homepage\": \"example.com\"} 1`] = `

[Input]
  1 | {"homepage": "example.com"}

`;

exports[`invalid(41): {\"homepage\": \"example.com\"} 2`] = `

Message:
> 1 | {"homepage": "example.com"}
    |              ^^^^^^^^^^^^^ The \`homepage\` field must be a valid \`http(s)\` URL.

`;

exports[`invalid(42): {\"homepage\": 42} 1`] = `

[Input]
  1 | {"homepage": 42}

`;

exports[`invalid(42): {\"homepage\": 42} 2`] = `

Message:
> 1 | {"homepage": 42}
    |              ^^ The \`homepage\` field must be a valid \`http(s)\` URL.

`;

exports[`invalid(43): {\"homepage\": \"\"} 1`] = `

[Input]
  1 | {"homepage": ""}

`;

exports[`invalid(43): {\"homepage\": \"\"} 2`] = `

Message:
> 1 | {"homepage": ""}
    |              ^^ The \`homepage\` field must be a valid \`http(s)\` URL.

`;

exports[`invalid(44): {\"bugs\": 123} 1`] = `

[Input]
  1 | {"bugs": 123}

`;

exports[`invalid(44): {\"bugs\": 123} 2`] = `

Message:
> 1 | {"bugs": 123}
    |          ^^^ The \`bugs\` field must be a URL string or an object with \`url\`/\`email\`.

`;

exports[`invalid(45): {\"bugs\": [\"https://example.com\"]} 1`] = `

[Input]
  1 | {"bugs": ["https://example.com"]}

`;

exports[`invalid(45): {\"bugs\": [\"https://example.com\"]} 2`] = `

Message:
> 1 | {"bugs": ["https://example.com"]}
    |          ^^^^^^^^^^^^^^^^^^^^^^^ The \`bugs\` field must be a URL string or an object with \`url\`/\`email\`.

`;

exports[`invalid(46): {\"bugs\": {\"url\": 1}} 1`] = `

[Input]
  1 | {"bugs": {"url": 1}}

`;

exports[`invalid(46): {\"bugs\": {\"url\": 1}} 2`] = `

Message:
> 1 | {"bugs": {"url": 1}}
    |                  ^ The \`bugs\` \`url\` must be a string.

`;

exports[`invalid(47): {\"bugs\": {\"email\": false}} 1`] = `

[Input]
  1 | {"bugs": {"email": false}}

`;

exports[`invalid(47): {\"bugs\": {\"email\": false}} 2`] = `

Message:
> 1 | {"bugs": {"email": false}}
    |                    ^^^^^ The \`bugs\` \`email\` must be a string.

`;

exports[`invalid(48): {\"funding\": 123} 1`] = `

[Input]
  1 | {"funding": 123}

`;

exports[`invalid(48): {\"funding\": 123} 2`] = `

Message:
> 1 | {"funding": 123}
    |             ^^^ The \`funding\` field must be a URL string, an object with a \`url\`, or an array of those.

`;

exports[`invalid(49): {\"funding\": {\"type\": \"individual\"}} 1`] = `

[Input]
  1 | {"funding": {"type": "individual"}}

`;

exports[`invalid(49): {\"funding\": {\"type\": \"individual\"}} 2`] = `

Message:
> 1 | {"funding": {"type": "individual"}}
    |             ^^^^^^^^^^^^^^^^^^^^^^ A \`funding\` object must have a \`url\` string.

`;

exports[`invalid(5): {\"name\": \"node_modules\"} 1`] = `

[Input]
  1 | {"name": "node_modules"}

`;

exports[`invalid(5): {\"name\": \"node_modules\"} 2`] = `

Message:
> 1 | {"name": "node_modules"}
    |          ^^^^^^^^^^^^^^ Invalid package name: node_modules is not a valid package name.

`;

exports[`invalid(50): {\"funding\": {\"url\": 42}} 1`] = `

[Input]
  1 | {"funding": {"url": 42}}

`;

exports[`invalid(50): {\"funding\": {\"url\": 42}} 2`] = `

Message:
> 1 | {"funding": {"url": 42}}
    |                     ^^ A \`funding\` object must have a \`url\` string.

`;

exports[`invalid(51): {\"funding\": [{\"type\": \"patreon\"}]} 1`] = `

[Input]
  1 | {"funding": [{"type": "patreon"}]}

`;

exports[`invalid(51): {\"funding\": [{\"type\": \"patreon\"}]} 2`] = `

Message:
> 1 | {"funding": [{"type": "patreon"}]}
    |              ^^^^^^^^^^^^^^^^^^^ A \`funding\` object must have a \`url\` string.

`;

exports[`invalid(52): {\"funding\": [1]} 1`] = `

[Input]
  1 | {"funding": [1]}

`;

exports[`invalid(52): {\"funding\": [1]} 2`] = `

Message:
> 1 | {"funding": [1]}
    |              ^ The \`funding\` field must be a URL string, an object with a \`url\`, or an array of those.

`;

exports[`invalid(53): {\"author\": {\"email\": \"sindre@example.com\"}} 1`] = `

[Input]
  1 | {"author": {"email": "sindre@example.com"}}

`;

exports[`invalid(53): {\"author\": {\"email\": \"sindre@example.com\"}} 2`] = `

Message:
> 1 | {"author": {"email": "sindre@example.com"}}
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ A person object must have a \`name\` string.

`;

exports[`invalid(54): {\"author\": {\"name\": 42}} 1`] = `

[Input]
  1 | {"author": {"name": 42}}

`;

exports[`invalid(54): {\"author\": {\"name\": 42}} 2`] = `

Message:
> 1 | {"author": {"name": 42}}
    |                     ^^ A person object must have a \`name\` string.

`;

exports[`invalid(55): {\"author\": 42} 1`] = `

[Input]
  1 | {"author": 42}

`;

exports[`invalid(55): {\"author\": 42} 2`] = `

Message:
> 1 | {"author": 42}
    |            ^^ A person must be a string or an object with a \`name\`.

`;

exports[`invalid(56): {\"author\": null} 1`] = `

[Input]
  1 | {"author": null}

`;

exports[`invalid(56): {\"author\": null} 2`] = `

Message:
> 1 | {"author": null}
    |            ^^^^ A person must be a string or an object with a \`name\`.

`;

exports[`invalid(57): {\"contributors\": {\"name\": \"Bob\"}} 1`] = `

[Input]
  1 | {"contributors": {"name": "Bob"}}

`;

exports[`invalid(57): {\"contributors\": {\"name\": \"Bob\"}} 2`] = `

Message:
> 1 | {"contributors": {"name": "Bob"}}
    |                  ^^^^^^^^^^^^^^^ The \`contributors\` field must be an array.

`;

exports[`invalid(58): {\"contributors\": [{\"email\": \"bob@example.com\"}]} 1`] = `

[Input]
  1 | {"contributors": [{"email": "bob@example.com"}]}

`;

exports[`invalid(58): {\"contributors\": [{\"email\": \"bob@example.com\"}]} 2`] = `

Message:
> 1 | {"contributors": [{"email": "bob@example.com"}]}
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ A person object must have a \`name\` string.

`;

exports[`invalid(59): {\"contributors\": [42]} 1`] = `

[Input]
  1 | {"contributors": [42]}

`;

exports[`invalid(59): {\"contributors\": [42]} 2`] = `

Message:
> 1 | {"contributors": [42]}
    |                   ^^ A person must be a string or an object with a \`name\`.

`;

exports[`invalid(6): {\"name\": \"@scope/\"} 1`] = `

[Input]
  1 | {"name": "@scope/"}

`;

exports[`invalid(6): {\"name\": \"@scope/\"} 2`] = `

Message:
> 1 | {"name": "@scope/"}
    |          ^^^^^^^^^ Invalid package name: name can only contain URL-friendly characters.

`;

exports[`invalid(60): {\"type\": \"esm\"} 1`] = `

[Input]
  1 | {"type": "esm"}

`;

exports[`invalid(60): {\"type\": \"esm\"} 2`] = `

Message:
> 1 | {"type": "esm"}
    |          ^^^^^ The \`type\` field must be either "commonjs" or "module".

`;

exports[`invalid(61): {\"type\": \"module \"} 1`] = `

[Input]
  1 | {"type": "module "}

`;

exports[`invalid(61): {\"type\": \"module \"} 2`] = `

Message:
> 1 | {"type": "module "}
    |          ^^^^^^^^^ The \`type\` field must be either "commonjs" or "module".

`;

exports[`invalid(62): {\"type\": \"Module\"} 1`] = `

[Input]
  1 | {"type": "Module"}

`;

exports[`invalid(62): {\"type\": \"Module\"} 2`] = `

Message:
> 1 | {"type": "Module"}
    |          ^^^^^^^^ The \`type\` field must be either "commonjs" or "module".

`;

exports[`invalid(63): {\"type\": true} 1`] = `

[Input]
  1 | {"type": true}

`;

exports[`invalid(63): {\"type\": true} 2`] = `

Message:
> 1 | {"type": true}
    |          ^^^^ The \`type\` field must be either "commonjs" or "module".

`;

exports[`invalid(64): {\"type\": 42} 1`] = `

[Input]
  1 | {"type": 42}

`;

exports[`invalid(64): {\"type\": 42} 2`] = `

Message:
> 1 | {"type": 42}
    |          ^^ The \`type\` field must be either "commonjs" or "module".

`;

exports[`invalid(65): {\"exports\": {\"default\": \"index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"default": "index.js"}}

`;

exports[`invalid(65): {\"exports\": {\"default\": \"index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"default": "index.js"}}
    |                         ^^^^^^^^^^ Export target \`index.js\` must be a package-relative path starting with \`./\`.

Output:
  1 | {"exports": {"default": "./index.js"}}

`;

exports[`invalid(66): {\"exports\": {\"default\": \"../index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"default": "../index.js"}}

`;

exports[`invalid(66): {\"exports\": {\"default\": \"../index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"default": "../index.js"}}
    |                         ^^^^^^^^^^^^^ Export target \`../index.js\` must be a package-relative path starting with \`./\`.

`;

exports[`invalid(67): {\n\t\"exports\": {\n\t\t\"./feature\": {\n\t\t\t\"default\": \"feature/index.js\"\n\t\t}\n\t}\n\t} 1`] = `

[Input]
  1 | {
  2 | 	"exports": {
  3 | 		"./feature": {
  4 | 			"default": "feature/index.js"
  5 | 		}
  6 | 	}
  7 | 	}

`;

exports[`invalid(67): {\n\t\"exports\": {\n\t\t\"./feature\": {\n\t\t\t\"default\": \"feature/index.js\"\n\t\t}\n\t}\n\t} 2`] = `

Message:
  1 | {
  2 | 	"exports": {
  3 | 		"./feature": {
> 4 | 			"default": "feature/index.js"
    | 			           ^^^^^^^^^^^^^^^^^^ Export target \`feature/index.js\` must be a package-relative path starting with \`./\`.
  5 | 		}
  6 | 	}
  7 | 	}

Output:
  1 | {
  2 | 	"exports": {
  3 | 		"./feature": {
  4 | 			"default": "./feature/index.js"
  5 | 		}
  6 | 	}
  7 | 	}

`;

exports[`invalid(68): {\"exports\": \"/abs/index.js\"} 1`] = `

[Input]
  1 | {"exports": "/abs/index.js"}

`;

exports[`invalid(68): {\"exports\": \"/abs/index.js\"} 2`] = `

Message:
> 1 | {"exports": "/abs/index.js"}
    |             ^^^^^^^^^^^^^^^ Export target \`/abs/index.js\` must be a package-relative path starting with \`./\`.

`;

exports[`invalid(69): {\"exports\": {\"default\": 123}} 1`] = `

[Input]
  1 | {"exports": {"default": 123}}

`;

exports[`invalid(69): {\"exports\": {\"default\": 123}} 2`] = `

Message:
> 1 | {"exports": {"default": 123}}
    |                         ^^^ An \`exports\` target must be a string, \`null\`, an object, or an array.

`;

exports[`invalid(7): {\"name\": \"\"} 1`] = `

[Input]
  1 | {"name": ""}

`;

exports[`invalid(7): {\"name\": \"\"} 2`] = `

Message:
> 1 | {"name": ""}
    |          ^^ Invalid package name: name length must be greater than zero.

`;

exports[`invalid(70): {\"exports\": {\"default\": true}} 1`] = `

[Input]
  1 | {"exports": {"default": true}}

`;

exports[`invalid(70): {\"exports\": {\"default\": true}} 2`] = `

Message:
> 1 | {"exports": {"default": true}}
    |                         ^^^^ An \`exports\` target must be a string, \`null\`, an object, or an array.

`;

exports[`invalid(71): {\"exports\": {\"default\": \"./dist/../index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"default": "./dist/../index.js"}}

`;

exports[`invalid(71): {\"exports\": {\"default\": \"./dist/../index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"default": "./dist/../index.js"}}
    |                         ^^^^^^^^^^^^^^^^^^^^ Export target \`./dist/../index.js\` contains a path segment that Node does not allow.

`;

exports[`invalid(72): {\"exports\": {\"default\": \"./dist/%2e%2e/index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"default": "./dist/%2e%2e/index.js"}}

`;

exports[`invalid(72): {\"exports\": {\"default\": \"./dist/%2e%2e/index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"default": "./dist/%2e%2e/index.js"}}
    |                         ^^^^^^^^^^^^^^^^^^^^^^^^ Export target \`./dist/%2e%2e/index.js\` contains a path segment that Node does not allow.

`;

exports[`invalid(73): {\"exports\": {\"default\": \"./node_modules/foo.js\"}} 1`] = `

[Input]
  1 | {"exports": {"default": "./node_modules/foo.js"}}

`;

exports[`invalid(73): {\"exports\": {\"default\": \"./node_modules/foo.js\"}} 2`] = `

Message:
> 1 | {"exports": {"default": "./node_modules/foo.js"}}
    |                         ^^^^^^^^^^^^^^^^^^^^^^^ Export target \`./node_modules/foo.js\` contains a path segment that Node does not allow.

`;

exports[`invalid(74): {\"exports\": {\"./utils/./helper.js\": \"./utils/helper.js\"}} 1`] = `

[Input]
  1 | {"exports": {"./utils/./helper.js": "./utils/helper.js"}}

`;

exports[`invalid(74): {\"exports\": {\"./utils/./helper.js\": \"./utils/helper.js\"}} 2`] = `

Message:
> 1 | {"exports": {"./utils/./helper.js": "./utils/helper.js"}}
    |              ^^^^^^^^^^^^^^^^^^^^^ Subpath key \`./utils/./helper.js\` contains a path segment that Node does not allow.

`;

exports[`invalid(75): {\"exports\": {\"0\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"0": "./index.js"}}

`;

exports[`invalid(75): {\"exports\": {\"0\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"0": "./index.js"}}
    |              ^^^ Condition key \`0\` must not be an array index.

`;

exports[`invalid(76): {\"exports\": null} 1`] = `

[Input]
  1 | {"exports": null}

`;

exports[`invalid(76): {\"exports\": null} 2`] = `

Message:
> 1 | {"exports": null}
    |             ^^^^ The top-level \`exports\` field must be a string, an object, or an array.

`;

exports[`invalid(77): {\"exports\": \"index.js\"} 1`] = `

[Input]
  1 | {"exports": "index.js"}

`;

exports[`invalid(77): {\"exports\": \"index.js\"} 2`] = `

Message:
> 1 | {"exports": "index.js"}
    |             ^^^^^^^^^^ Export target \`index.js\` must be a package-relative path starting with \`./\`.

Output:
  1 | {"exports": "./index.js"}

`;

exports[`invalid(78): {\"exports\": {\".\": [\"a.js\", \"./b.js\"]}} 1`] = `

[Input]
  1 | {"exports": {".": ["a.js", "./b.js"]}}

`;

exports[`invalid(78): {\"exports\": {\".\": [\"a.js\", \"./b.js\"]}} 2`] = `

Message:
> 1 | {"exports": {".": ["a.js", "./b.js"]}}
    |                    ^^^^^^ Export target \`a.js\` must be a package-relative path starting with \`./\`.

Output:
  1 | {"exports": {".": ["./a.js", "./b.js"]}}

`;

exports[`invalid(79): {\"exports\": {\".\": \"./index.js\", \"import\": \"./index.mjs\"}} 1`] = `

[Input]
  1 | {"exports": {".": "./index.js", "import": "./index.mjs"}}

`;

exports[`invalid(79): {\"exports\": {\".\": \"./index.js\", \"import\": \"./index.mjs\"}} 2`] = `

Message:
> 1 | {"exports": {".": "./index.js", "import": "./index.mjs"}}
    |                                 ^^^^^^^^ Cannot mix subpath keys and condition keys; \`import\` does not match its siblings.

`;

exports[`invalid(8): {\"name\": \"excited!\"} 1`] = `

[Input]
  1 | {"name": "excited!"}

`;

exports[`invalid(8): {\"name\": \"excited!\"} 2`] = `

Message:
> 1 | {"name": "excited!"}
    |          ^^^^^^^^^^ Invalid package name: name can no longer contain special characters ("~'!()*").

`;

exports[`invalid(80): {\"exports\": {\".foo\": \"./foo.js\"}} 1`] = `

[Input]
  1 | {"exports": {".foo": "./foo.js"}}

`;

exports[`invalid(80): {\"exports\": {\".foo\": \"./foo.js\"}} 2`] = `

Message:
> 1 | {"exports": {".foo": "./foo.js"}}
    |              ^^^^^^ Subpath key \`.foo\` must be \`.\` or start with \`./\`.

`;

exports[`invalid(81): {\"exports\": {\"./feature\": {\"default\": \"./dist/*.js\"}}} 1`] = `

[Input]
  1 | {"exports": {"./feature": {"default": "./dist/*.js"}}}

`;

exports[`invalid(81): {\"exports\": {\"./feature\": {\"default\": \"./dist/*.js\"}}} 2`] = `

Message:
> 1 | {"exports": {"./feature": {"default": "./dist/*.js"}}}
    |                                       ^^^^^^^^^^^^^ The target \`./dist/*.js\` must not contain \`*\` unless the subpath key \`./feature\` also contains \`*\`.

`;

exports[`invalid(82): {\"exports\": {\"./feature\": \"./dist/*.js\"}} 1`] = `

[Input]
  1 | {"exports": {"./feature": "./dist/*.js"}}

`;

exports[`invalid(82): {\"exports\": {\"./feature\": \"./dist/*.js\"}} 2`] = `

Message:
> 1 | {"exports": {"./feature": "./dist/*.js"}}
    |                           ^^^^^^^^^^^^^ The target \`./dist/*.js\` must not contain \`*\` unless the subpath key \`./feature\` also contains \`*\`.

`;

exports[`invalid(83): {\"exports\": {\"./feature//\": \"./feature/\"}} 1`] = `

[Input]
  1 | {"exports": {"./feature//": "./feature/"}}

`;

exports[`invalid(83): {\"exports\": {\"./feature//\": \"./feature/\"}} 2`] = `

Message:
> 1 | {"exports": {"./feature//": "./feature/"}}
    |              ^^^^^^^^^^^^^ Subpath key \`./feature//\` contains a path segment that Node does not allow.

`;

exports[`invalid(84): {\"exports\": {\"./feature\": {\"types\": \"./dist/feature.d.ts\", \"default\": \"./dist/feature/*.js\"}}} 1`] = `

[Input]
  1 | {"exports": {"./feature": {"types": "./dist/feature.d.ts", "default": "./dist/feature/*.js"}}}

`;

exports[`invalid(84): {\"exports\": {\"./feature\": {\"types\": \"./dist/feature.d.ts\", \"default\": \"./dist/feature/*.js\"}}} 2`] = `

Message:
> 1 | {"exports": {"./feature": {"types": "./dist/feature.d.ts", "default": "./dist/feature/*.js"}}}
    |                                                                       ^^^^^^^^^^^^^^^^^^^^^ The target \`./dist/feature/*.js\` must not contain \`*\` unless the subpath key \`./feature\` also contains \`*\`.

`;

exports[`invalid(85): {\"exports\": \"./dist/*.js\"} 1`] = `

[Input]
  1 | {"exports": "./dist/*.js"}

`;

exports[`invalid(85): {\"exports\": \"./dist/*.js\"} 2`] = `

Message:
> 1 | {"exports": "./dist/*.js"}
    |             ^^^^^^^^^^^^^ The target \`./dist/*.js\` must not contain \`*\` unless the subpath key \`.\` also contains \`*\`.

`;

exports[`invalid(86): {\"exports\": {\"default\": \"./dist/*.js\"}} 1`] = `

[Input]
  1 | {"exports": {"default": "./dist/*.js"}}

`;

exports[`invalid(86): {\"exports\": {\"default\": \"./dist/*.js\"}} 2`] = `

Message:
> 1 | {"exports": {"default": "./dist/*.js"}}
    |                         ^^^^^^^^^^^^^ The target \`./dist/*.js\` must not contain \`*\` unless the subpath key \`.\` also contains \`*\`.

`;

exports[`invalid(87): {\"imports\": {\"dep\": \"./src/dep.js\"}} 1`] = `

[Input]
  1 | {"imports": {"dep": "./src/dep.js"}}

`;

exports[`invalid(87): {\"imports\": {\"dep\": \"./src/dep.js\"}} 2`] = `

Message:
> 1 | {"imports": {"dep": "./src/dep.js"}}
    |              ^^^^^ The \`imports\` key \`dep\` must start with \`#\`.

`;

exports[`invalid(88): {\"imports\": {\"#dep\": \"./a.js\", \"dep\": \"./b.js\"}} 1`] = `

[Input]
  1 | {"imports": {"#dep": "./a.js", "dep": "./b.js"}}

`;

exports[`invalid(88): {\"imports\": {\"#dep\": \"./a.js\", \"dep\": \"./b.js\"}} 2`] = `

Message:
> 1 | {"imports": {"#dep": "./a.js", "dep": "./b.js"}}
    |                                ^^^^^ The \`imports\` key \`dep\` must start with \`#\`.

`;

exports[`invalid(89): {\"imports\": [\"#dep\"]} 1`] = `

[Input]
  1 | {"imports": ["#dep"]}

`;

exports[`invalid(89): {\"imports\": [\"#dep\"]} 2`] = `

Message:
> 1 | {"imports": ["#dep"]}
    |             ^^^^^^^^ The \`imports\` field must be an object.

`;

exports[`invalid(9): {\"version\": \"1.0\"} 1`] = `

[Input]
  1 | {"version": "1.0"}

`;

exports[`invalid(9): {\"version\": \"1.0\"} 2`] = `

Message:
> 1 | {"version": "1.0"}
    |             ^^^^^ \`1.0\` is not a valid semver version.

`;

exports[`invalid(90): {\"imports\": {\"#dep\": 123}} 1`] = `

[Input]
  1 | {"imports": {"#dep": 123}}

`;

exports[`invalid(90): {\"imports\": {\"#dep\": 123}} 2`] = `

Message:
> 1 | {"imports": {"#dep": 123}}
    |                      ^^^ An \`imports\` target must be a string, \`null\`, an object, or an array.

`;

exports[`invalid(91): {\"imports\": {\"#dep\": \"../dep.js\"}} 1`] = `

[Input]
  1 | {"imports": {"#dep": "../dep.js"}}

`;

exports[`invalid(91): {\"imports\": {\"#dep\": \"../dep.js\"}} 2`] = `

Message:
> 1 | {"imports": {"#dep": "../dep.js"}}
    |                      ^^^^^^^^^^^ The \`imports\` target \`../dep.js\` is not a valid local path or package specifier.

`;

exports[`invalid(92): {\"imports\": {\"#dep\": \"./dep/../index.js\"}} 1`] = `

[Input]
  1 | {"imports": {"#dep": "./dep/../index.js"}}

`;

exports[`invalid(92): {\"imports\": {\"#dep\": \"./dep/../index.js\"}} 2`] = `

Message:
> 1 | {"imports": {"#dep": "./dep/../index.js"}}
    |                      ^^^^^^^^^^^^^^^^^^^ The \`imports\` target \`./dep/../index.js\` is not a valid local path or package specifier.

`;

exports[`invalid(93): {\"imports\": {\"#dep\": \"./dist/%2e%2e/index.js\"}} 1`] = `

[Input]
  1 | {"imports": {"#dep": "./dist/%2e%2e/index.js"}}

`;

exports[`invalid(93): {\"imports\": {\"#dep\": \"./dist/%2e%2e/index.js\"}} 2`] = `

Message:
> 1 | {"imports": {"#dep": "./dist/%2e%2e/index.js"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^ The \`imports\` target \`./dist/%2e%2e/index.js\` is not a valid local path or package specifier.

`;

exports[`invalid(94): {\"imports\": {\"#\": \"./dep.js\"}} 1`] = `

[Input]
  1 | {"imports": {"#": "./dep.js"}}

`;

exports[`invalid(94): {\"imports\": {\"#\": \"./dep.js\"}} 2`] = `

Message:
> 1 | {"imports": {"#": "./dep.js"}}
    |              ^^^ The \`imports\` key \`#\` is not a valid package subpath.

`;

exports[`invalid(95): {\"imports\": {\"#dep//\": \"./dep/\"}} 1`] = `

[Input]
  1 | {"imports": {"#dep//": "./dep/"}}

`;

exports[`invalid(95): {\"imports\": {\"#dep//\": \"./dep/\"}} 2`] = `

Message:
> 1 | {"imports": {"#dep//": "./dep/"}}
    |              ^^^^^^^^ The \`imports\` key \`#dep//\` is not a valid package subpath.

`;

exports[`invalid(96): {\"imports\": {\"#dep/../other\": \"./dep.js\"}} 1`] = `

[Input]
  1 | {"imports": {"#dep/../other": "./dep.js"}}

`;

exports[`invalid(96): {\"imports\": {\"#dep/../other\": \"./dep.js\"}} 2`] = `

Message:
> 1 | {"imports": {"#dep/../other": "./dep.js"}}
    |              ^^^^^^^^^^^^^^^ The \`imports\` key \`#dep/../other\` is not a valid package subpath.

`;

exports[`invalid(97): {\"imports\": {\"#dep\": \"https://example.com/dep.js\"}} 1`] = `

[Input]
  1 | {"imports": {"#dep": "https://example.com/dep.js"}}

`;

exports[`invalid(97): {\"imports\": {\"#dep\": \"https://example.com/dep.js\"}} 2`] = `

Message:
> 1 | {"imports": {"#dep": "https://example.com/dep.js"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`imports\` target \`https://example.com/dep.js\` is not a valid local path or package specifier.

`;

exports[`invalid(98): {\"imports\": {\"#dep\": \".\"}} 1`] = `

[Input]
  1 | {"imports": {"#dep": "."}}

`;

exports[`invalid(98): {\"imports\": {\"#dep\": \".\"}} 2`] = `

Message:
> 1 | {"imports": {"#dep": "."}}
    |                      ^^^ The \`imports\` target \`.\` is not a valid local path or package specifier.

`;

exports[`invalid(99): {\"imports\": {\"#dep\": \"node:\"}} 1`] = `

[Input]
  1 | {"imports": {"#dep": "node:"}}

`;

exports[`invalid(99): {\"imports\": {\"#dep\": \"node:\"}} 2`] = `

Message:
> 1 | {"imports": {"#dep": "node:"}}
    |                      ^^^^^^^ The \`imports\` target \`node:\` is not a valid local path or package specifier.

`;
